--- a/Synctool/Synctool.csproj
+++ b/Synctool/Synctool.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp5.0|AnyCPU'">
-    <DocumentationFile>D:\WorkCode\Source\Synctool\Synctool\Synctool.xml</DocumentationFile>
+    <DocumentationFile>D:\Project\synctool\Synctool\Synctool.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp3.1|AnyCPU'">
