--- a/Synctool/Synctool.csproj
+++ b/Synctool/Synctool.csproj
@@ -8,7 +8,10 @@
 	  <PackageId>XExten.Advance</PackageId>
 	  <Product>XExten.Advance</Product>
 	  <Version>1.0.1.2</Version>
-	  <AssemblyVersion>1.0.1.2</AssemblyVersion>
+	  <AssemblyVersion>1.0.1.3</AssemblyVersion>
+	  <PackageProjectUrl>https://github.com/EmilyEdna/SyncTool</PackageProjectUrl>
+	  <FileVersion>1.0.1.3</FileVersion>
+	  <PackageReleaseNotes>Add Convert</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp5.0|AnyCPU'">
