--- a/Synctool/Synctool.csproj
+++ b/Synctool/Synctool.csproj
@@ -7,10 +7,10 @@
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	  <PackageId>XExten.Advance</PackageId>
 	  <Product>XExten.Advance</Product>
-	  <Version>1.0.1.3</Version>
-	  <AssemblyVersion>1.0.1.3</AssemblyVersion>
+	  <Version>1.0.1.4</Version>
+	  <AssemblyVersion>1.0.1.4</AssemblyVersion>
 	  <PackageProjectUrl>https://github.com/EmilyEdna/SyncTool</PackageProjectUrl>
-	  <FileVersion>1.0.1.3</FileVersion>
+	  <FileVersion>1.0.1.4</FileVersion>
 	  <PackageReleaseNotes>Add Convert</PackageReleaseNotes>
   </PropertyGroup>
 
@@ -23,15 +23,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.1.0" />
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Chinese" Version="0.3.6" />
     <PackageReference Include="MessagePack" Version="2.2.85" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="5.0.0" />
-    <PackageReference Include="MongoDB.Driver" Version="2.12.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.12.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="NPOI" Version="2.5.2" />
+    <PackageReference Include="NPOI" Version="2.5.3" />
     <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
