--- a/Synctool/Synctool.csproj
+++ b/Synctool/Synctool.csproj
@@ -7,11 +7,11 @@
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	  <PackageId>XExten.Advance</PackageId>
 	  <Product>XExten.Advance</Product>
-	  <Version>1.0.1.6-alpha-3</Version>
-	  <AssemblyVersion>1.0.1.6</AssemblyVersion>
+	  <Version>1.0.2</Version>
+	  <AssemblyVersion>1.0.2.0</AssemblyVersion>
 	  <PackageProjectUrl>https://github.com/EmilyEdna/SyncTool</PackageProjectUrl>
-	  <FileVersion>1.0.1.6</FileVersion>
-	  <PackageReleaseNotes>Add Convert</PackageReleaseNotes>
+	  <FileVersion>1.0.2.0</FileVersion>
+	  <PackageReleaseNotes>Overwrite HttpMultiClient And Add WebProxy</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp5.0|AnyCPU'">
