--- a/Synctool/Synctool.csproj
+++ b/Synctool/Synctool.csproj
@@ -7,10 +7,10 @@
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	  <PackageId>XExten.Advance</PackageId>
 	  <Product>XExten.Advance</Product>
-	  <Version>1.0.2</Version>
-	  <AssemblyVersion>1.0.2.0</AssemblyVersion>
+	  <Version>1.0.2.1-preview</Version>
+	  <AssemblyVersion>1.0.2.1</AssemblyVersion>
 	  <PackageProjectUrl>https://github.com/EmilyEdna/SyncTool</PackageProjectUrl>
-	  <FileVersion>1.0.2.0</FileVersion>
+	  <FileVersion>1.0.2.1</FileVersion>
 	  <PackageReleaseNotes>Overwrite HttpMultiClient And Add WebProxy</PackageReleaseNotes>
   </PropertyGroup>
 
