--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -7,10 +7,10 @@
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	  <PackageId>XExten.Advance</PackageId>
 	  <Product>XExten.Advance</Product>
-	  <Version>1.0.2.4-beta-2</Version>
-	  <AssemblyVersion>1.0.2.4</AssemblyVersion>
+	  <Version>1.1.0</Version>
+	  <AssemblyVersion>1.1.0.0</AssemblyVersion>
 	  <PackageProjectUrl>https://github.com/EmilyEdna/XExten.Advance</PackageProjectUrl>
-	  <FileVersion>1.0.2.4</FileVersion>
+	  <FileVersion>1.1.0.0</FileVersion>
 	  <PackageReleaseNotes>针对升级上来的版本所有的域名空间变更，由以前的Synctool变更为XExten.Advance</PackageReleaseNotes>
 	  <AssemblyName>XExten.Advance</AssemblyName>
 	  <RootNamespace>XExten.Advance</RootNamespace>
