--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -1,61 +1,64 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-	  <TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
-	  <Authors>EmilyEdna</Authors>
-	  <Description>XExten包的优化升级版本，后期只会更新这个包，不在维护XExten包</Description>
-	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	  <PackageId>XExten.Advance</PackageId>
-	  <Product>XExten.Advance</Product>
-	  <Version>1.1.0.2-app-beta</Version>
-	  <AssemblyVersion>1.1.0.2</AssemblyVersion>
-	  <PackageProjectUrl>https://github.com/EmilyEdna/XExten.Advance</PackageProjectUrl>
-	  <FileVersion>1.1.0.2</FileVersion>
-	  <PackageReleaseNotes>此版本适用xarmarin.form
-【文件监听】-&gt;1.1.0.2</PackageReleaseNotes>
-	  <AssemblyName>XExten.Advance</AssemblyName>
-	  <RootNamespace>XExten.Advance</RootNamespace>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
+		<Authors>EmilyEdna</Authors>
+		<Description>XExten包的优化升级版本，后期只会更新这个包，不在维护XExten包</Description>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageId>XExten.Advance</PackageId>
+		<Product>XExten.Advance</Product>
+		<Version>1.1.0.2-app-beta</Version>
+		<AssemblyVersion>1.1.0.2</AssemblyVersion>
+		<PackageProjectUrl>https://github.com/EmilyEdna/XExten.Advance</PackageProjectUrl>
+		<FileVersion>1.1.0.2</FileVersion>
+		<PackageReleaseNotes>
+			此版本适用xarmarin.form
+			【文件监听】-&gt;1.1.0.2
+		</PackageReleaseNotes>
+		<AssemblyName>XExten.Advance</AssemblyName>
+		<RootNamespace>XExten.Advance</RootNamespace>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp5.0|AnyCPU'">
-    <DocumentationFile>D:\Project\XExten.Advance\XExten.Advance\XExten.Advance.xml</DocumentationFile>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp5.0|AnyCPU'">
+		<DocumentationFile>D:\Project\XExten.Advance\XExten.Advance\XExten.Advance.xml</DocumentationFile>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp3.1|AnyCPU'">
-    <DocumentationFile>D:\Project\XExten.Advance\XExten.Advance\XExten.Advance.xml</DocumentationFile>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp3.1|AnyCPU'">
+		<DocumentationFile>D:\Project\XExten.Advance\XExten.Advance\XExten.Advance.xml</DocumentationFile>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>D:\Project\XExten.Advance\XExten.Advance\XExten.Advance.xml</DocumentationFile>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<DocumentationFile>D:\Project\XExten.Advance\XExten.Advance\XExten.Advance.xml</DocumentationFile>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="CacheFramework\MongoDbCache\**" />
-    <Compile Remove="CacheFramework\RedisCache\**" />
-    <Compile Remove="InternalFramework\Office\**" />
-    <EmbeddedResource Remove="CacheFramework\MongoDbCache\**" />
-    <EmbeddedResource Remove="CacheFramework\RedisCache\**" />
-    <EmbeddedResource Remove="InternalFramework\Office\**" />
-    <None Remove="CacheFramework\MongoDbCache\**" />
-    <None Remove="CacheFramework\RedisCache\**" />
-    <None Remove="InternalFramework\Office\**" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="CacheFramework\MongoDbCache\**" />
+		<Compile Remove="CacheFramework\RedisCache\**" />
+		<Compile Remove="InternalFramework\Office\**" />
+		<EmbeddedResource Remove="CacheFramework\MongoDbCache\**" />
+		<EmbeddedResource Remove="CacheFramework\RedisCache\**" />
+		<EmbeddedResource Remove="InternalFramework\Office\**" />
+		<None Remove="CacheFramework\MongoDbCache\**" />
+		<None Remove="CacheFramework\RedisCache\**" />
+		<None Remove="InternalFramework\Office\**" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <!--<PackageReference Include="Autofac" Version="6.2.0" />
+	<ItemGroup>
+		<!--<PackageReference Include="Autofac" Version="6.2.0" />
     <PackageReference Include="NPOI" Version="2.5.3" />
     <PackageReference Include="MongoDB.Driver" Version="2.12.4" />
     <PackageReference Include="StackExchange.Redis" Version="2.2.4" />-->
-    <PackageReference Include="AutoMapper" Version="10.1.1" />
-    <PackageReference Include="Chinese" Version="0.4.6" />
-    <PackageReference Include="DryIoc.dll" Version="4.8.1" />
-    <PackageReference Include="MessagePack" Version="2.2.85" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="5.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
-    <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
-  </ItemGroup>
+		<PackageReference Include="AutoMapper" Version="10.1.1" />
+		<PackageReference Include="Chinese" Version="0.4.6" />
+		<PackageReference Include="DryIoc.dll" Version="4.8.1" />
+		<PackageReference Include="MessagePack" Version="2.2.85" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="5.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="5.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
+		<PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
+	</ItemGroup>
 
 </Project>
