--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -7,11 +7,11 @@
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	  <PackageId>XExten.Advance</PackageId>
 	  <Product>XExten.Advance</Product>
-	  <Version>1.1.0.2</Version>
-	  <AssemblyVersion>1.1.0.2</AssemblyVersion>
+	  <Version>1.1.0.3</Version>
+	  <AssemblyVersion>1.1.0.3</AssemblyVersion>
 	  <PackageProjectUrl>https://github.com/EmilyEdna/XExten.Advance</PackageProjectUrl>
-	  <FileVersion>1.1.0.2</FileVersion>
-	  <PackageReleaseNotes>【文件监听】-&gt;1.1.0.2</PackageReleaseNotes>
+	  <FileVersion>1.1.0.3</FileVersion>
+	  <PackageReleaseNotes>【优化部分功能】-&gt;1.1.0.3</PackageReleaseNotes>
 	  <AssemblyName>XExten.Advance</AssemblyName>
 	  <RootNamespace>XExten.Advance</RootNamespace>
   </PropertyGroup>
