--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -7,12 +7,12 @@
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>XExten.Advance</PackageId>
 		<Product>XExten.Advance</Product>
-		<Version>1.1.0.5-app-beta</Version>
-		<AssemblyVersion>1.1.0.5</AssemblyVersion>
+		<Version>1.1.0.6-app-beta</Version>
+		<AssemblyVersion>1.1.0.6</AssemblyVersion>
 		<PackageProjectUrl>https://github.com/EmilyEdna/XExten.Advance</PackageProjectUrl>
-		<FileVersion>1.1.0.5</FileVersion>
+		<FileVersion>1.1.0.6</FileVersion>
 		<PackageReleaseNotes>此版本适用xarmarin.form
-【功能优化】-&gt;1.1.0.5
+【新增高性能对象映射组件】-&gt;1.1.0.6
 		</PackageReleaseNotes>
 		<AssemblyName>XExten.Advance</AssemblyName>
 		<RootNamespace>XExten.Advance</RootNamespace>
@@ -50,6 +50,7 @@
 		<PackageReference Include="AutoMapper" Version="10.1.1" />
 		<PackageReference Include="Chinese" Version="0.4.6" />
 		<PackageReference Include="DryIoc.dll" Version="4.8.1" />
+		<PackageReference Include="Mapster" Version="7.2.0" />
 		<PackageReference Include="MessagePack" Version="2.2.85" />
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="5.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
