--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -7,11 +7,12 @@
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	  <PackageId>XExten.Advance</PackageId>
 	  <Product>XExten.Advance</Product>
-	  <Version>1.1.0.7</Version>
-	  <AssemblyVersion>1.1.0.7</AssemblyVersion>
+	  <Version>1.1.0.8</Version>
+	  <AssemblyVersion>1.1.0.8</AssemblyVersion>
 	  <PackageProjectUrl>https://github.com/EmilyEdna/XExten.Advance</PackageProjectUrl>
-	  <FileVersion>1.1.0.7</FileVersion>
-	  <PackageReleaseNotes>【修复MogoDB无法批量更新的问题】-&gt;1.1.0.7</PackageReleaseNotes>
+	  <FileVersion>1.1.0.8</FileVersion>
+	  <PackageReleaseNotes>【修复415问题】-&gt;1.1.0.8
+【新增Mogo批量删除】-&gt;1.1.0.8</PackageReleaseNotes>
 	  <AssemblyName>XExten.Advance</AssemblyName>
 	  <RootNamespace>XExten.Advance</RootNamespace>
   </PropertyGroup>
