--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -1,53 +1,54 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-	  <TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
-	  <Authors>EmilyEdna</Authors>
-	  <Description>XExten包的优化升级版本，后期只会更新这个包，不在维护XExten包</Description>
-	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	  <PackageId>XExten.Advance</PackageId>
-	  <Product>XExten.Advance</Product>
-	  <Version>1.1.0.11</Version>
-	  <AssemblyVersion>1.1.0.11</AssemblyVersion>
-	  <PackageProjectUrl>https://github.com/EmilyEdna/XExten.Advance</PackageProjectUrl>
-	  <FileVersion>1.1.0.11</FileVersion>
-	  <PackageReleaseNotes>【修复415问题】-&gt;1.1.0.8
+	<PropertyGroup>
+		<TargetFrameworks>netstandard2.1;net5.0;net6.0</TargetFrameworks>
+		<Authors>EmilyEdna</Authors>
+		<Description>XExten包的优化升级版本，后期只会更新这个包，不在维护XExten包</Description>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageId>XExten.Advance</PackageId>
+		<Product>XExten.Advance</Product>
+		<Version>1.1.0.12</Version>
+		<AssemblyVersion>1.1.0.12</AssemblyVersion>
+		<PackageProjectUrl>https://github.com/EmilyEdna/XExten.Advance</PackageProjectUrl>
+		<FileVersion>1.1.0.12</FileVersion>
+		<PackageReleaseNotes>【修复415问题】-&gt;1.1.0.8
 【新增Mogo批量删除】-&gt;1.1.0.8
 【新增保留小数非四舍五入】-&gt;1.1.0.8
 【更换Mogo更新删除的实现】-&gt;1.1.0.10
-【更换Redis链接】-&gt;1.1.0.11</PackageReleaseNotes>
-	  <AssemblyName>XExten.Advance</AssemblyName>
-	  <RootNamespace>XExten.Advance</RootNamespace>
-  </PropertyGroup>
+【更换Redis链接】-&gt;1.1.0.11
+【更新Aop拦截器】-&gt;1.1.0.12</PackageReleaseNotes>
+		<AssemblyName>XExten.Advance</AssemblyName>
+		<RootNamespace>XExten.Advance</RootNamespace>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp5.0|AnyCPU'">
-    <DocumentationFile>D:\Project\XExten.Advance\XExten.Advance\XExten.Advance.xml</DocumentationFile>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp5.0|AnyCPU'">
+		<DocumentationFile>D:\Project\XExten.Advance\XExten.Advance\XExten.Advance.xml</DocumentationFile>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp3.1|AnyCPU'">
-    <DocumentationFile>D:\Project\XExten.Advance\XExten.Advance\XExten.Advance.xml</DocumentationFile>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp3.1|AnyCPU'">
+		<DocumentationFile>D:\Project\XExten.Advance\XExten.Advance\XExten.Advance.xml</DocumentationFile>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>D:\Project\XExten.Advance\XExten.Advance\XExten.Advance.xml</DocumentationFile>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<DocumentationFile>D:\Project\XExten.Advance\XExten.Advance\XExten.Advance.xml</DocumentationFile>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="10.1.1" />
-    <PackageReference Include="Chinese" Version="0.4.6" />
-    <PackageReference Include="DryIoc.dll" Version="4.8.3" />
-    <PackageReference Include="Mapster" Version="7.2.0" />
-    <PackageReference Include="MessagePack" Version="2.3.85" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="5.0.0" />
-    <PackageReference Include="MongoDB.Driver" Version="2.13.2" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="NPOI" Version="2.5.4" />
-    <PackageReference Include="StackExchange.Redis" Version="2.2.79" />
-    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
-    <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="10.1.1" />
+		<PackageReference Include="Chinese" Version="0.4.6" />
+		<PackageReference Include="DryIoc.dll" Version="4.8.3" />
+		<PackageReference Include="Mapster" Version="7.2.0" />
+		<PackageReference Include="MessagePack" Version="2.3.85" />
+		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="5.0.0" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="5.0.0" />
+		<PackageReference Include="MongoDB.Driver" Version="2.13.2" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="NPOI" Version="2.5.4" />
+		<PackageReference Include="StackExchange.Redis" Version="2.2.79" />
+		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
+		<PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
+	</ItemGroup>
 
 </Project>
