--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -1,19 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.1;net5.0;net6.0</TargetFrameworks>
 		<Authors>EmilyEdna</Authors>
 		<Description>XExten包的优化升级版本，后期只会更新这个包，不在维护XExten包</Description>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>XExten.Advance</PackageId>
 		<Product>XExten.Advance</Product>
-		<Version>1.1.0.8-app-beta</Version>
-		<AssemblyVersion>1.1.0.8</AssemblyVersion>
+		<Version>1.1.0.12-app-beta</Version>
+		<AssemblyVersion>1.1.0.12</AssemblyVersion>
 		<PackageProjectUrl>https://github.com/EmilyEdna/XExten.Advance</PackageProjectUrl>
-		<FileVersion>1.1.0.8</FileVersion>
+		<FileVersion>1.1.0.12</FileVersion>
 		<PackageReleaseNotes>此版本适用xarmarin.form
 【修复415问题】-&gt;1.1.0.8-app-beta
 【新增保留小数非四舍五入】-&gt;1.1.0.8-app-beta
+【更新Aop拦截器】-&gt;1.1.0.12-app-beta
 		</PackageReleaseNotes>
 		<AssemblyName>XExten.Advance</AssemblyName>
 		<RootNamespace>XExten.Advance</RootNamespace>
