--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -7,16 +7,17 @@
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>XExten.Advance</PackageId>
 		<Product>XExten.Advance</Product>
-		<Version>1.1.0.14</Version>
-		<AssemblyVersion>1.1.0.14</AssemblyVersion>
+		<Version>1.1.0.15</Version>
+		<AssemblyVersion>1.1.0.15</AssemblyVersion>
 		<PackageProjectUrl>https://github.com/EmilyEdna/XExten.Advance</PackageProjectUrl>
-		<FileVersion>1.1.0.14</FileVersion>
+		<FileVersion>1.1.0.15</FileVersion>
 		<PackageReleaseNotes>【修复415问题】-&gt;1.1.0.8
 【新增Mogo批量删除】-&gt;1.1.0.8
 【新增保留小数非四舍五入】-&gt;1.1.0.8
 【更换Mogo更新删除的实现】-&gt;1.1.0.10
 【更换Redis链接】-&gt;1.1.0.11
-【更新Aop拦截器】-&gt;1.1.0.14</PackageReleaseNotes>
+【更新Aop拦截器】-&gt;1.1.0.14
+【添加新功能】-&gt;1.1.0.15</PackageReleaseNotes>
 		<AssemblyName>XExten.Advance</AssemblyName>
 		<RootNamespace>XExten.Advance</RootNamespace>
 	</PropertyGroup>
