--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -37,19 +37,20 @@
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="10.1.1" />
 		<PackageReference Include="Chinese" Version="0.4.6" />
-		<PackageReference Include="DryIoc.dll" Version="4.8.3" />
+		<PackageReference Include="DryIoc.dll" Version="4.8.4" />
 		<PackageReference Include="Mapster" Version="7.2.0" />
 		<PackageReference Include="MessagePack" Version="2.3.85" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
-		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="5.0.0" />
-		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="5.0.0" />
-		<PackageReference Include="MongoDB.Driver" Version="2.13.2" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="6.0.0" />
+		<PackageReference Include="MongoDB.Driver" Version="2.14.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="NPOI" Version="2.5.4" />
-		<PackageReference Include="StackExchange.Redis" Version="2.2.79" />
+		<PackageReference Include="NPOI" Version="2.5.5" />
+		<PackageReference Include="Polly" Version="7.2.2" />
+		<PackageReference Include="StackExchange.Redis" Version="2.2.88" />
 		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
-		<PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
+		<PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
 	</ItemGroup>
 
 </Project>
