--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -62,6 +62,7 @@
 		<PackageReference Include="MongoDB.Driver" Version="2.14.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="NPOI" Version="2.5.4" />
+		<PackageReference Include="Polly" Version="7.2.2" />
 		<PackageReference Include="StackExchange.Redis" Version="2.2.79" />
 		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
 		<PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
