--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1;net5.0;net6.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
 		<Authors>EmilyEdna</Authors>
 		<Description>XExten包的优化升级版本，后期只会更新这个包，不在维护XExten包</Description>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
