--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -7,15 +7,16 @@
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>XExten.Advance</PackageId>
 		<Product>XExten.Advance</Product>
-		<Version>1.1.0.15-beta</Version>
-		<AssemblyVersion>1.1.0.15</AssemblyVersion>
+		<Version>1.1.1.0-beta</Version>
+		<AssemblyVersion>1.1.1.0</AssemblyVersion>
 		<PackageProjectUrl>https://github.com/EmilyEdna/XExten.Advance</PackageProjectUrl>
-		<FileVersion>1.1.0.15</FileVersion>
+		<FileVersion>1.1.1.0</FileVersion>
 		<PackageReleaseNotes>此版本适用xarmarin.form
 【修复415问题】-&gt;1.1.0.8-beta
 【新增保留小数非四舍五入】-&gt;1.1.0.8-beta
 【更新Aop拦截器】-&gt;1.1.0.14-beta
 【添加新功能】-&gt;1.1.0.15-beta
+【添加lzstring加解密】-&gt;1.1.1.0-beta
 		</PackageReleaseNotes>
 		<AssemblyName>XExten.Advance</AssemblyName>
 		<RootNamespace>XExten.Advance</RootNamespace>
@@ -46,10 +47,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<!--<PackageReference Include="Autofac" Version="6.2.0" />
-    <PackageReference Include="NPOI" Version="2.5.3" />
-    <PackageReference Include="MongoDB.Driver" Version="2.12.4" />
-    <PackageReference Include="StackExchange.Redis" Version="2.2.4" />-->
 		<PackageReference Include="AutoMapper" Version="10.1.1" />
 		<PackageReference Include="Chinese" Version="0.4.6" />
 		<PackageReference Include="DryIoc.dll" Version="4.8.4" />
@@ -59,11 +56,8 @@
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="6.0.0" />
-		<PackageReference Include="MongoDB.Driver" Version="2.14.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="NPOI" Version="2.5.4" />
 		<PackageReference Include="Polly" Version="7.2.2" />
-		<PackageReference Include="StackExchange.Redis" Version="2.2.79" />
 		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
 		<PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
 	</ItemGroup>
