--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -22,6 +22,7 @@
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="11.0.0" />
 		<PackageReference Include="Chinese" Version="0.4.6" />
+		<PackageReference Include="DnsClient" Version="1.5.0" />
 		<PackageReference Include="DryIoc.dll" Version="4.8.6" />
 		<PackageReference Include="Mapster" Version="7.2.0" />
 		<PackageReference Include="MessagePack" Version="2.3.85" />
@@ -32,7 +33,7 @@
 		<PackageReference Include="MongoDB.Driver" Version="2.14.1" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="NPOI" Version="2.5.5" />
-		<PackageReference Include="Polly" Version="7.2.2" />
+		<PackageReference Include="Polly" Version="7.2.3" />
 		<PackageReference Include="StackExchange.Redis" Version="2.2.88" />
 		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
 		<PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
