--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -23,7 +23,7 @@
 		<PackageReference Include="AutoMapper" Version="11.0.1" />
 		<PackageReference Include="Chinese" Version="0.4.6" />
 		<PackageReference Include="DnsClient" Version="1.6.0" />
-		<PackageReference Include="DryIoc.dll" Version="4.8.8" />
+		<PackageReference Include="DryIoc.dll" Version="5.0.1" />
 		<PackageReference Include="Mapster" Version="7.3.0" />
 		<PackageReference Include="MessagePack" Version="2.3.85" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
@@ -32,9 +32,10 @@
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="6.0.0" />
 		<PackageReference Include="MongoDB.Driver" Version="2.15.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="NPOI" Version="2.5.5" />
+		<PackageReference Include="NPOI" Version="2.5.6" />
 		<PackageReference Include="Polly" Version="7.2.3" />
-		<PackageReference Include="StackExchange.Redis" Version="2.5.43" />
+		<PackageReference Include="RestSharp" Version="107.3.0" />
+		<PackageReference Include="StackExchange.Redis" Version="2.5.61" />
 		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
 		<PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
 		<PackageReference Include="System.Threading.Channels" Version="6.0.0" />
