--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -7,8 +7,8 @@
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>XExten.Advance</PackageId>
 		<Product>XExten.Advance</Product>
-		<Version>1.1.3.3-beta</Version>
-		<AssemblyVersion>1.1.3.3</AssemblyVersion>
+		<Version>1.2.0-beta</Version>
+		<AssemblyVersion>1.2.0</AssemblyVersion>
 		<PackageProjectUrl>https://github.com/EmilyEdna/XExten.Advance</PackageProjectUrl>
 		<FileVersion>1.2.0</FileVersion>
 		<AssemblyName>XExten.Advance</AssemblyName>
@@ -44,6 +44,7 @@
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="6.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="Polly" Version="7.2.3" />
+		<PackageReference Include="RestSharp" Version="107.3.0" />
 		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
 		<PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
 		<PackageReference Include="System.Threading.Channels" Version="6.0.0" />
