--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -7,7 +7,7 @@
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>XExten.Advance</PackageId>
 		<Product>XExten.Advance</Product>
-		<Version>1.2.2-beta</Version>
+		<Version>1.2.2-beta2</Version>
 		<AssemblyVersion>1.2.2</AssemblyVersion>
 		<PackageProjectUrl>https://github.com/EmilyEdna/XExten.Advance</PackageProjectUrl>
 		<FileVersion>1.2.2</FileVersion>
@@ -35,7 +35,7 @@
 		<PackageReference Include="AutoMapper" Version="11.0.1" />
 		<PackageReference Include="Chinese" Version="0.4.6" />
 		<PackageReference Include="DnsClient" Version="1.6.0" />
-		<PackageReference Include="DryIoc.dll" Version="5.0.1" />
+		<PackageReference Include="DryIoc.dll" Version="4.8.8" />
 		<PackageReference Include="Mapster" Version="7.3.0" />
 		<PackageReference Include="MessagePack" Version="2.3.85" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
