--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -7,8 +7,8 @@
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>XExten.Advance</PackageId>
 		<Product>XExten.Advance</Product>
-		<Version>1.2.2-beta2</Version>
-		<AssemblyVersion>1.2.2</AssemblyVersion>
+		<Version>1.2.3-preview</Version>
+		<AssemblyVersion>1.2.3</AssemblyVersion>
 		<PackageProjectUrl>https://github.com/EmilyEdna/XExten.Advance</PackageProjectUrl>
 		<FileVersion>1.2.3</FileVersion>
 		<AssemblyName>XExten.Advance</AssemblyName>
@@ -42,7 +42,6 @@
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.1" />
 		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="6.0.0" />
-		<PackageReference Include="MongoDB.Driver" Version="2.15.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="Polly" Version="7.2.3" />
 		<PackageReference Include="RestSharp" Version="107.3.0" />
