--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -7,10 +7,10 @@
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>XExten.Advance</PackageId>
 		<Product>XExten.Advance</Product>
-		<Version>2.2.2.3</Version>
-		<AssemblyVersion>2.2.2.3</AssemblyVersion>
+		<Version>2.2.2.4</Version>
+		<AssemblyVersion>2.2.2.4</AssemblyVersion>
 		<PackageProjectUrl>https://github.com/EmilyEdna/XExten.Advance</PackageProjectUrl>
-		<FileVersion>2.2.2.3</FileVersion>
+		<FileVersion>2.2.2.4</FileVersion>
 		<AssemblyName>XExten.Advance</AssemblyName>
 		<RootNamespace>XExten.Advance</RootNamespace>
 	</PropertyGroup>
@@ -20,6 +20,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Magick.NET-Q16-AnyCPU" Version="13.10.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
@@ -34,7 +35,6 @@
 		<PackageReference Include="NPOI" Version="2.7.1" />
 		<PackageReference Include="Polly" Version="8.4.1" />
 		<PackageReference Include="RestSharp" Version="112.0.0" />
-		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
 		<PackageReference Include="StackExchange.Redis" Version="2.8.12" />
 		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
 		<PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0" />
