--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -36,6 +36,7 @@
 		<PackageReference Include="Polly" Version="8.4.1" />
 		<PackageReference Include="RestSharp" Version="112.0.0" />
 		<PackageReference Include="StackExchange.Redis" Version="2.8.16" />
+		<PackageReference Include="System.IO.Ports" Version="8.0.0" />
 		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
 		<PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0" />
 		<PackageReference Include="System.Threading.Channels" Version="8.0.0" />
