--- a/XExten.Advance/XExten.Advance.csproj
+++ b/XExten.Advance/XExten.Advance.csproj
@@ -34,6 +34,8 @@
 		<PackageReference Include="NPOI" Version="2.7.2" />
 		<PackageReference Include="Polly" Version="8.5.0" />
 		<PackageReference Include="RestSharp" Version="112.1.0" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+		<PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
 		<PackageReference Include="StackExchange.Redis" Version="2.8.22" />
 		<PackageReference Include="System.IO.Ports" Version="9.0.0" />
 		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
